# RobotVLA

./: README.md  README_en.md  __init__.py  requirements.txt
config/: example_config.yaml
core/: __init__.py  config.py  pipeline.py  types.py
examples/: basic_example.py
language/: __init__.py  models.py
robots/: Cargo.toml
robots/src/: lib.rs  types.rs
vision/: __init__.py  adapters.py  registry.py  utils.py
