[package]
name = "robotvla-engine"
version = "0.1.0"
edition = "2021"
authors = ["RobotVLA Team"]
description = "High-performance robot function execution engine for RobotVLA"

[lib]
name = "robotvla_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Networking
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Serialization
bincode = "1.3"
rmp-serde = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# Optional: Hardware communication
# serialport = { version = "4.2", optional = true }
# socketcan = { version = "3.2", optional = true }

[features]
default = ["python-bindings"]
python-bindings = ["pyo3"]
hardware = []  # Enable hardware communication features

[dev-dependencies]
tokio-test = "0.4" 